corregido parcialmente asociaciones
